# starstruck-vex-worlds

./: README.md
src/jetson/: CMakeLists.txt  Euler.cpp  Sensors.cpp  package.xml  prog
src/jetson/EncoderTest/encoderTest/: encoderTest.ino
src/jetson/Encoder_Kalman/: Encoder_Kalman.ino
src/jetson/Yost_3_Space/: main.cpp  main.cpp~  prog
src/jetson/catkin_ws/devel/: setup.sh
src/jetson/catkin_ws/src/learning_image_geometry/: CMakeLists.txt  CMakeLists.txt~  package.xml  package.xml~
src/jetson/opencv/gpu/: build.sh  main.cpp
src/jetson/opencv/imgTest/: build.sh  imgTest.cpp  prog
src/jetson/opencv/objectDetect/: test.cpp
src/jetson/opencv/opencvKinect/: test  test.cpp
src/robot/: CMakeLists.txt  Enums.h  Locomotion.cpp  Robot.cpp  Robot.h  RobotMath.h  RunRobot.cpp  package.xml
src/robot/launch/: Robot.launch
